fix(CSS): remove some animations on mobile

--- a/core/static/assets/style/laec-v2.css
+++ b/core/static/assets/style/laec-v2.css
@@ -43,54 +43,57 @@ body {
     padding-top: 0;
 }
 
-.woa {
-    animation: letter-effect 10s 0s ease-in-out infinite;
-}
-
-.jumbotron h1 span:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.jumbotron h1 span:nth-child(2) {
-    animation-delay: 200ms;
-}
-
-.jumbotron h1 span:nth-child(4) {
-    animation-delay: 400ms;
-}
-
-.jumbotron h1 span:nth-child(6) {
-    animation-delay: 600ms;
-}
-
-#resultats a.resultat {
-  text-decoration:none;
-}
-
-
-
-
-
-@keyframes letter-effect {
-    0% {
-        color: var(--aec_white);
-        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+@media all and (min-width: 992px) {
+    .woa {
+        animation: letter-effect 10s 0s ease-in-out infinite;
     }
 
-    80% {
-        color: var(--aec_white);
-        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+    .jumbotron h1 span:nth-child(1) {
+        animation-delay: 0s;
     }
 
-    90% {
-        color: var(--aec_violet);
-        -webkit-text-stroke: 1px rgba(255, 255, 255, 0.8);
+    .jumbotron h1 span:nth-child(2) {
+        animation-delay: 200ms;
     }
 
-    100% {
-        color: var(--aec_white);
-        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+    .jumbotron h1 span:nth-child(4) {
+        animation-delay: 400ms;
     }
+
+    .jumbotron h1 span:nth-child(6) {
+        animation-delay: 600ms;
+    }
+
+    #resultats a.resultat {
+      text-decoration:none;
+    }
+
+
+
+
+
+    @keyframes letter-effect {
+        0% {
+            color: var(--aec_white);
+            -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+        }
+
+        80% {
+            color: var(--aec_white);
+            -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+        }
+
+        90% {
+            color: var(--aec_violet);
+            -webkit-text-stroke: 1px rgba(255, 255, 255, 0.8);
+        }
+
+        100% {
+            color: var(--aec_white);
+            -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
+        }
+    }
+
 }
 
 .jumbotron {
@@ -231,19 +234,21 @@ body {
     transform: translateX(-50%);
 }
 
-.page-index .jumb-bg svg path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    animation: dash 5s linear infinite;
-}
-
-@keyframes dash {
-    0% {
+@media all and (min-width: 992px) {
+    .page-index .jumb-bg svg path {
+        stroke-dasharray: 1000;
         stroke-dashoffset: 1000;
+        animation: dash 5s linear infinite;
     }
 
-    100% {
-        stroke-dashoffset: -1000;
+    @keyframes dash {
+        0% {
+            stroke-dashoffset: 1000;
+        }
+
+        100% {
+            stroke-dashoffset: -1000;
+        }
     }
 }
 
@@ -383,20 +388,24 @@ body {
     transform: scale(0.7);
 }
 
+@media all and (min-width: 992px) {
+    @keyframes scroll {
+        0% {
+            transform: translateY(0);
+        }
 
-@keyframes scroll {
-    0% {
-        transform: translateY(0);
+        30% {
+            transform: translateY(60px);
+        }
     }
 
-    30% {
-        transform: translateY(60px);
+    svg #wheel {
+        animation: scroll ease 2s infinite;
     }
 }
 
 svg #wheel {
     opacity: 0.9;
-    animation: scroll ease 2s infinite;
 }
 
 svg #mouse {
@@ -418,11 +427,12 @@ svg #mouse {
     margin: 0 auto;
     /* z-index: 2; */
 }
-
-.laec-def-lines svg path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    animation: dash 5s linear infinite;
+@media all and (min-width: 992px) {
+    .laec-def-lines svg path {
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 1000;
+        animation: dash 5s linear infinite;
+    }
 }
 
 section.laec-def .title {
@@ -543,10 +553,12 @@ section.laec-def .btn-def .btn-cta:hover {
     z-index: 1;
 }
 
-.foot svg path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    animation: dash 5s linear infinite;
+@media all and (min-width: 992px) {
+    .foot svg path {
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 1000;
+        animation: dash 5s linear infinite;
+    }
 }
 
 .foot::after {
@@ -903,16 +915,4 @@ footer.footer a {
 .filters .btn-copy.copied {
     background-color: #EEE !important;
     color: var(--aec_violet);
-}
-
-/* lenteurs firefox */
-@supports (-moz-appearance:none) {
-   .page-index .jumb-bg svg path, .laec-def-lines svg path, .foot svg path {
-      stroke-dasharray: 0;
-      stroke-dashoffset: 0;
-      animation: none;
-   }
-}
-@media all and (min-width: 768px) {
-  /* animation rules */
 }
